[gd_scene load_steps=6 format=3 uid="uid://8mwchnefuyx0"]

[ext_resource type="Script" path="res://Scripts/OnlineDefaultGameScene/OG_online_game_scene.gd" id="1_tr0sq"]
[ext_resource type="PackedScene" uid="uid://bb1hsjv35krnk" path="res://NodeScene/network_manager_2Player.tscn" id="2_ivgw1"]
[ext_resource type="PackedScene" uid="uid://canc50wskx2cl" path="res://NodeScene/custom_game_settings.tscn" id="3_q33ca"]
[ext_resource type="Script" path="res://Scripts/OnlineDefaultGameScene/OG_PlayerManager.gd" id="4_dg7y5"]
[ext_resource type="PackedScene" uid="uid://d0icyj31p2tgw" path="res://NodeScene/game_manager.tscn" id="5_8llhi"]

[node name="OnlineGameScene" type="Node3D"]
script = ExtResource("1_tr0sq")

[node name="NetworkManager" parent="." instance=ExtResource("2_ivgw1")]

[node name="GameSettings" parent="." instance=ExtResource("3_q33ca")]

[node name="myPlayer" type="Node" parent="."]
script = ExtResource("4_dg7y5")

[node name="enemyPlayer" type="Node" parent="."]
script = ExtResource("4_dg7y5")

[node name="GameManager" parent="." instance=ExtResource("5_8llhi")]
